<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/imgCover"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/CoverPoster"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/movie1" />


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imgback"
        android:layout_width="67dp"
        android:layout_height="89dp"
        android:contentDescription="@string/logoBack"
        android:scaleType="centerInside"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="3dp"
        app:civ_shadow="true"
        app:civ_shadow_color="#7A7A7A"
        app:civ_shadow_radius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgMovie"
        android:layout_width="147dp"
        android:layout_height="194dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/content_image_detail"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/movie1" />

    <TextView
        android:id="@+id/txtDJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/alike"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMovie"
        tools:text="Kimi no Na Wa" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alike"
        android:text="@string/txtOverview"
        android:textColor="#323232"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDJudul" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="360dp"
        android:background="#D9E9EC"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/logo_rating"
                app:srcCompat="@drawable/rating" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/logo_genre"
                app:srcCompat="@drawable/ic_baseline_video_library_24"
                tools:srcCompat="@drawable/ic_baseline_video_library_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alike"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:text="8.96" />

            <TextView
                android:id="@+id/txtGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alike"
                android:textAlignment="center"
                android:textColor="#070707"
                android:textSize="18sp"
                tools:text="Romance" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/txtDescription"
            android:textColor="#323232"
            android:textSize="16sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtdeskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/alike"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    tools:text="Deskripsi" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ImgDetailFav"
        android:layout_width="85dp"
        android:layout_height="89dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/ImgFav"
        android:scaleType="centerInside"
        android:src="@drawable/ic_baseline_favorite_24"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="3dp"
        app:civ_shadow="true"
        app:civ_shadow_color="#7A7A7A"
        app:civ_shadow_radius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

</androidx.constraintlayout.widget.ConstraintLayout>