...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imgFav"
        android:layout_width="67dp"
        android:layout_height="89dp"
        android:contentDescription="@string/ImgFav"
        android:scaleType="centerInside"
        android:src="@drawable/ic_baseline_favorite_24"
        app:civ_border_color="#FFFFFF"
...
