...
        android:backgroundTintMode="screen"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">


        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/gambarcard"
            android:layout_width="125dp"
            android:layout_height="147dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
...
